# Canary3DS

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
application/: CMakeLists.txt  Makefile  application.3dsx  application.elf
application/include/: constants.h  filebrowser.h  gfx.h  image.h  opus.h
application/source/: filebrowser.cpp  gfx.cpp  image.cpp  main.c  main.cpp  main.cpp.old  opus.cpp  stb_image.cpp
assets/: canary.rsf  canary3ds.rsf
include/: app_lifecycle.h  app_state.h  audio_decoder.h  audio_dsp.h  audio_engine.h  constants.h  ctx_menu.h  filebrowser.h  gfx.h  image.h  input_handlers.h  opus.h  playlist.h  render_frame.h  scrobbler.h  settings.h  toggle_settings.h
meta/: banner.ceol
romfs/: music-note-symbol-in-a-rounded-square.t3x  musical-note-square-button.t3x
romfs/font/: OpenSans-SemiBold.bcfnt
romfs/icons/: dashboard-speed-white-24size-1.5weight.t3x  folder-black-24size-1.5weight.t3x  folder-white-24size-1.5weight.t3x  music-note-black-24size-1.5weight.t3x  music-note-solid-black-24size-1.5weight.t3x  music-note-solid-white-24size-1.5weight.t3x  music-note-white-24size-1.5weight.t3x  playlist-black-24size-1.5weight.t3x  playlist-white-24size-1.5weight.t3x  settings-black-24size-1.5weight.t3x  settings-white-24size-1.5weight.t3x  xbox-a-white-24size-1.5weight.t3x  xbox-b-white-24size-1.5weight.t3x  xbox-x-white-24size-1.5weight.t3x  xbox-y-white-24size-1.5weight.t3x  xmark-white-24size-1.5weight.t3x
scripts/: convert_textures.sh  format.sh
source/: app_lifecycle.cpp  filebrowser.cpp  flac_decoder.cpp  gfx.cpp  image.cpp  input_handlers.cpp  main.cpp  opus.cpp  playlist.cpp  render_frame.cpp  scrobbler.cpp  settings.cpp  toggle_settings.cpp
source/audio/: aac_decoder.cpp  audio_decoder.cpp  audio_dsp.cpp  audio_engine.cpp  flac_decoder.cpp  mp3_decoder.cpp  opus_decoder.cpp  vorbis_decoder.cpp  wav_decoder.cpp
